2008-08-27  Adrien Nader  <camaradetux@gmail.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20099
        [GTK] SHIFT+PAGE_UP/DOWN doesn't extend selection

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::EditorClient::handleKeyboardEvent):


Canonical link: https://commits.webkit.org/28361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35958 268f45cc-cd09-0410-ab3c-d52691b4dbfc